<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <ScrollView android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <Button
                        android:text="@string/quickBtn1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        style="@style/button_style"
                        android:id="@+id/quickBtn1"
                />
                <Button
                        android:text="@string/quickBtn2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:id="@+id/quickBtn2"
                        style="@style/button_style"/>
                <Button
                        android:text="@string/quickBtn3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:id="@+id/quickBtn3"
                        style="@style/button_style"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <Button
                        android:text="@string/quickBtn4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        style="@style/button_style"
                        android:id="@+id/quickBtn4"
                />
                <Button
                        android:text="@string/quickBtn5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:id="@+id/quickBtn5"
                        style="@style/button_style"/>
                <Button
                        android:text="@string/quickBtn6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:id="@+id/quickBtn6"
                        style="@style/button_style"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <Button
                        android:text="@string/quickBtn7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        style="@style/button_style"
                        android:id="@+id/quickBtn7"
                />
                <Button
                        android:text="@string/quickBtn8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:id="@+id/quickBtn8"
                        style="@style/button_style"/>
                <Button
                        android:text="@string/quickBtn9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:id="@+id/quickBtn9"
                        style="@style/button_style"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2">

        <ImageButton
                android:layout_width="@dimen/move_button_size"
                android:layout_height="@dimen/move_button_size"
                android:scaleType="fitXY"
                android:id="@+id/stopBtn"
                android:layout_centerInParent="true"
                android:src="@drawable/move_stop"
                tools:ignore="ContentDescription"
                style="@style/imageBtn_style"/>
        <ImageButton
                android:id="@+id/upBtn"
                android:layout_width="@dimen/move_button_size"
                android:layout_height="@dimen/move_button_size"
                android:scaleType="fitXY"
                android:layout_centerHorizontal="true"
                android:layout_above="@+id/stopBtn"
                android:src="@drawable/move_up" tools:ignore="ContentDescription"
                style="@style/imageBtn_style"/>
        <ImageButton
                android:id="@+id/downBtn"
                android:layout_width="@dimen/move_button_size"
                android:layout_height="@dimen/move_button_size"
                android:scaleType="fitXY"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/stopBtn"
                android:src="@drawable/move_down" tools:ignore="ContentDescription"
                style="@style/imageBtn_style"/>
        <ImageButton
                android:id="@+id/leftBtn"
                android:layout_width="@dimen/move_button_size"
                android:layout_height="@dimen/move_button_size"
                android:scaleType="fitXY"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/stopBtn"
                android:src="@drawable/move_left" tools:ignore="ContentDescription"
                style="@style/imageBtn_style"/>
        <ImageButton
                android:id="@+id/rightBtn"
                android:layout_width="@dimen/move_button_size"
                android:layout_height="@dimen/move_button_size"
                android:scaleType="fitXY"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/stopBtn"
                android:src="@drawable/move_right"
                tools:ignore="ContentDescription"
                style="@style/imageBtn_style"/>
    </RelativeLayout>
</LinearLayout>
